--- a/css/firstPage.css
+++ b/css/firstPage.css
@@ -81,6 +81,7 @@ body {
     font-size: 30px;
 }
 
+
 .gallary {
     width: 80%;
     height: 100%;
@@ -88,6 +89,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 20px;
+    margin: 0 auto;
 }
 
 .gallary img {
