--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Pretendard Std Variable", "Pretendard Std", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 header {
@@ -42,17 +44,7 @@ header {
 }
 
 iframe {
-    height: 85vh;
-}
-
-footer {
-    width: 100%;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    background-color: #0073FF;
-    color: white;
+    height: 100vh;
 }
 
 @media screen and (max-width: 899px) {
@@ -73,7 +65,7 @@ footer {
 
 @media screen and (max-width: 679px) {
     header {
-        height: 83px;
+        height: 110px;
     }
 
     .logo {
