--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,14 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-std.min.css");
 
 body {
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     font-family: "Pretendard Std Variable", "Pretendard Std", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
     box-sizing: border-box;
     overflow: hidden;
+    height: 100vh;
 }
 
 header {
@@ -44,7 +47,7 @@ header {
 }
 
 iframe {
-    height: 100vh;
+    flex: 1 1 auto;
 }
 
 @media screen and (max-width: 899px) {
