자가진단 페이지 기초 제작

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ header {
     padding-left: 40px;
 }
 
+.logo:hover {
+    cursor: pointer;
+}
+
 .toolbar {
     padding-right: 40px;
     font-weight: "SemiBold";
