--- a/css/game.css
+++ b/css/game.css
@@ -29,15 +29,15 @@ h1 {
 
 .correct {
     color: #007BFF;
-    text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
     width: 100vw;
     height: 100vh;
     text-align: center;
+    background-color: rgba(0,0,0,0.3);
 }
 
 .wrong {
     color: #FF4C4C;
-    text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.3);
     width: 100vw;
     height: 100vh;
     text-align: center;
